--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: dash
+title: kukuwhy
 author: GitHub User
-email: miguel-gonzalez@gmx.de
+email: kukuwhy6@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -27,13 +27,7 @@ dash:
   # generate social links in footer
   # supported colors: green, red, orange, blue, cyan, pink, teal, yellow, indigo, purple
   social_links:
-    - url: https://twitter.com/bitbrain_
-      icon: twitter-square
-      color: cyan
-    - url: https://bitbrain.itch.io
-      icon: itch-io
-      color: red
-    - url: https://github.com/bitbrain
+    - url: https://github.com/kukuwhy
       icon: github-square
       color: purple
 
